airflow/logs/dag_id=movie_recommendation_pipeline/run_id=manual__2025-06-02T055835.671292+0000/task_id=train_user_model/attempt=2.log
[2025-06-02T06:02:01.643+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: movie_recommendation_pipeline.train_user_model manual__2025-06-02T05:58:35.671292+00:00 [queued]>
[2025-06-02T06:02:01.650+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: movie_recommendation_pipeline.train_user_model manual__2025-06-02T05:58:35.671292+00:00 [queued]>
[2025-06-02T06:02:01.650+0000] {taskinstance.py:2170} INFO - Starting attempt 2 of 3
[2025-06-02T06:02:01.660+0000] {taskinstance.py:2191} INFO - Executing <Task(PythonOperator): train_user_model> on 2025-06-02 05:58:35.671292+00:00
[2025-06-02T06:02:01.667+0000] {standard_task_runner.py:60} INFO - Started process 567 to run task
[2025-06-02T06:02:01.669+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'movie_recommendation_pipeline', 'train_user_model', 'manual__2025-06-02T05:58:35.671292+00:00', '--job-id', '1528', '--raw', '--subdir', 'DAGS_FOLDER/mlops_movie_dag.py', '--cfg-path', '/tmp/tmpmnpq7zg0']
[2025-06-02T06:02:01.671+0000] {standard_task_runner.py:88} INFO - Job 1528: Subtask train_user_model
[2025-06-02T06:02:01.709+0000] {task_command.py:423} INFO - Running <TaskInstance: movie_recommendation_pipeline.train_user_model manual__2025-06-02T05:58:35.671292+00:00 [running]> on host b538f1038008
[2025-06-02T06:02:01.764+0000] {taskinstance.py:2480} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='movie_recommendation_pipeline' AIRFLOW_CTX_TASK_ID='train_user_model' AIRFLOW_CTX_EXECUTION_DATE='2025-06-02T05:58:35.671292+00:00' AIRFLOW_CTX_TRY_NUMBER='2' AIRFLOW_CTX_DAG_RUN_ID='manual__2025-06-02T05:58:35.671292+00:00'
[2025-06-02T06:02:01.765+0000] {mlops_movie_dag.py:12} INFO - 🟦 Running command: python /opt/***/src/models/train_user_model.py
[2025-06-02T06:02:01.798+0000] {mlops_movie_dag.py:19} INFO - 🟩 [stdout]:

[2025-06-02T06:02:01.799+0000] {mlops_movie_dag.py:21} WARNING - 🟨 [stderr]:
  File "/opt/***/src/models/train_user_model.py", line 103
    input_example=pd.DataFrame(X[:5], columns=feature_names)
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

[2025-06-02T06:02:01.799+0000] {mlops_movie_dag.py:29} ERROR - ❌ Subprozess-Fehler (exit code 1): python /opt/***/src/models/train_user_model.py
[2025-06-02T06:02:01.799+0000] {mlops_movie_dag.py:32} ERROR - ❌ Subprozess-Ausnahme: Command '['python', '/opt/***/src/models/train_user_model.py']' returned non-zero exit status 1.
[2025-06-02T06:02:01.800+0000] {taskinstance.py:2698} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.10/site-packages/airflow/models/taskinstance.py", line 433, in _execute_task
    result = execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.10/site-packages/airflow/operators/python.py", line 199, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.10/site-packages/airflow/operators/python.py", line 216, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/mlops_movie_dag.py", line 113, in run_train_user_model
    run_and_log(["python", "/opt/airflow/src/models/train_user_model.py"])
  File "/opt/airflow/dags/mlops_movie_dag.py", line 30, in run_and_log
    raise subprocess.CalledProcessError(result.returncode, command)
subprocess.CalledProcessError: Command '['python', '/opt/airflow/src/models/train_user_model.py']' returned non-zero exit status 1.
[2025-06-02T06:02:01.809+0000] {taskinstance.py:1138} INFO - Marking task as UP_FOR_RETRY. dag_id=movie_recommendation_pipeline, task_id=train_user_model, execution_date=20250602T055835, start_date=20250602T060201, end_date=20250602T060201
[2025-06-02T06:02:01.818+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 1528 for task train_user_model (Command '['python', '/opt/airflow/src/models/train_user_model.py']' returned non-zero exit status 1.; 567)
[2025-06-02T06:02:01.842+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2025-06-02T06:02:01.864+0000] {taskinstance.py:3280} INFO - 0 downstream tasks scheduled from follow-on schedule check
